--- a/app/_includes/head/scripts.html
+++ b/app/_includes/head/scripts.html
@@ -1,2 +1,2 @@
 <!-- Scripts -->
-<script src="{{ '/assets/js/head.js' | prepend: site.baseurl }}"></script>
+<script src="{{ '/assets/scripts/head.js' | prepend: site.baseurl }}"></script>
