--- a/app/_includes/foot/scripts.html
+++ b/app/_includes/foot/scripts.html
@@ -1,2 +1,2 @@
 <!-- Scripts -->
-<script src="{{ '/assets/js/main.js' | prepend: site.baseurl }}"></script>
+<script src="{{ '/assets/scripts/main.js' | prepend: site.baseurl }}"></script>
