--- a/app/_includes/head/styles.html
+++ b/app/_includes/head/styles.html
@@ -1,2 +1,2 @@
 <!-- Styles -->
-<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/assets/styles/main.css" | prepend: site.baseurl }}">
